chore: update action
Signed-off-by: Kevin Lefevre <lefevre.kevin@gmail.com>

--- a/.github/workflows/demo.yml
+++ b/.github/workflows/demo.yml
@@ -10,7 +10,7 @@ on:
 
 jobs:
   terraform:
-    name: 'terragrunt:env:demo'
+    name: 'terraform:env:demo'
     runs-on: ubuntu-latest
     steps:
     - name: checkout
