--- a/.github/workflows/s3.yml
+++ b/.github/workflows/s3.yml
@@ -73,6 +73,7 @@ jobs:
         SCW_DEFAULT_ORGANIZATION_ID: ${{ secrets.SCW_DEFAULT_ORGANIZATION_ID }}
         SCW_DEFAULT_REGION: fr-par
         SCW_DEFAULT_ZONE: fr-par-1
+      if: github.ref == 'refs/heads/master'
 
     - name: 'terraform:destroy:kapsule'
       run: terraform destroy -auto-approve
@@ -86,3 +87,4 @@ jobs:
         SCW_DEFAULT_ORGANIZATION_ID: ${{ secrets.SCW_DEFAULT_ORGANIZATION_ID }}
         SCW_DEFAULT_REGION: fr-par
         SCW_DEFAULT_ZONE: fr-par-1
+      if: github.ref == 'refs/heads/master'
