--- a/.github/workflows/tfcloud.yml
+++ b/.github/workflows/tfcloud.yml
@@ -78,7 +78,7 @@ jobs:
     - name: 'terraform:destroy:kapsule'
       run: terraform destroy -auto-approve
       working-directory: terraform/live/demo/fr-par/kapsule-tfcloud
-      if: "!contains(github.event.head_commit.message, 'ci keep')"
+      if: "!contains(github.event.head_commit.message, 'ci keep') && github.ref == 'refs/heads/master'"
       env:
         AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
         AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
@@ -87,4 +87,3 @@ jobs:
         SCW_DEFAULT_ORGANIZATION_ID: ${{ secrets.SCW_DEFAULT_ORGANIZATION_ID }}
         SCW_DEFAULT_REGION: fr-par
         SCW_DEFAULT_ZONE: fr-par-1
-      if: github.ref == 'refs/heads/master'
