chore: rename jobs
Signed-off-by: Kevin Lefevre <lefevre.kevin@gmail.com>

--- a/.github/workflows/mkdocs.yml
+++ b/.github/workflows/mkdocs.yml
@@ -12,7 +12,7 @@ on:
 
 jobs:
   terraform:
-    name: 'teks:mkdocs'
+    name: 'tkap:mkdocs'
     runs-on: ubuntu-latest
     steps:
     - name: 'slack:start'
