chore(ci): match files for tfcloud
Signed-off-by: Kevin Lefevre <lefevre.kevin@gmail.com>

--- a/.github/workflows/tfcloud.yml
+++ b/.github/workflows/tfcloud.yml
@@ -5,7 +5,7 @@ on:
     branches:
     - master
     paths:
-    - 'terraform/live/demo/fr-par/kapsule-tfcloud'
+    - 'terraform/live/demo/fr-par/kapsule-tfcloud/**'
     - '.github/workflows/tfcloud.yml'
   pull_request:
 
