--- a/.github/workflows/s3.yml
+++ b/.github/workflows/s3.yml
@@ -95,10 +95,22 @@ jobs:
         SCW_DEFAULT_REGION: fr-par
         SCW_DEFAULT_ZONE: fr-par-1
 
+    - name: 'terraform:destroy:kapsule:failsafe'
+      run: terraform destroy -auto-approve
+      working-directory: terraform/live/demo/fr-par/kapsule-s3
+      if: "!contains(github.event.head_commit.message, '[ci keep]') && github.ref == 'refs/heads/master'"
+      env:
+        AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+        AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+        SCW_ACCESS_KEY: ${{ secrets.SCW_ACCESS_KEY }}
+        SCW_SECRET_KEY: ${{ secrets.SCW_SECRET_KEY }}
+        SCW_DEFAULT_ORGANIZATION_ID: ${{ secrets.SCW_DEFAULT_ORGANIZATION_ID }}
+        SCW_DEFAULT_REGION: fr-par
+        SCW_DEFAULT_ZONE: fr-par-1
+
     - name: 'terraform:destroy:kapsule:cleanup-stale-state'
       run: terraform state list 2>/dev/null | xargs terraform state rm
       working-directory: terraform/live/demo/fr-par/kapsule-s3
-      continue-on-error: true
       if: "!contains(github.event.head_commit.message, '[ci keep]') && github.ref == 'refs/heads/master'"
 
     - name: 'slack:success'
