--- a/.github/workflows/s3.yml
+++ b/.github/workflows/s3.yml
@@ -43,7 +43,7 @@ jobs:
 
     - name: 'terraform:fmt:kapsule'
       run: terraform fmt -check
-      working-directory: terraform/live/demo/fr-par/kapsule-s3
+      working-directory: terraform/live/demo-s3/fr-par/clusters/full/kapsule
       env:
         AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
         AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
@@ -55,7 +55,7 @@ jobs:
 
     - name: 'terraform:init:kapsule'
       run: terraform init
-      working-directory: terraform/live/demo/fr-par/kapsule-s3
+      working-directory: terraform/live/demo-s3/fr-par/clusters/full/kapsule
       env:
         AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
         AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
@@ -67,7 +67,7 @@ jobs:
 
     - name: 'terraform:plan:kapsule'
       run: terraform plan
-      working-directory: terraform/live/demo/fr-par/kapsule-s3
+      working-directory: terraform/live/demo-s3/fr-par/clusters/full/kapsule
       env:
         AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
         AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
@@ -79,7 +79,7 @@ jobs:
 
     - name: 'terraform:apply:kapsule'
       run: terraform apply -auto-approve
-      working-directory: terraform/live/demo/fr-par/kapsule-s3
+      working-directory: terraform/live/demo-s3/fr-par/clusters/full/kapsule
       env:
         AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
         AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
@@ -92,7 +92,7 @@ jobs:
 
     - name: 'terraform:destroy:kapsule'
       run: terraform destroy -auto-approve
-      working-directory: terraform/live/demo/fr-par/kapsule-s3
+      working-directory: terraform/live/demo-s3/fr-par/clusters/full/kapsule
       if: "!contains(github.event.head_commit.message, '[ci keep]') && github.ref == 'refs/heads/master'"
       continue-on-error: true
       env:
@@ -106,7 +106,7 @@ jobs:
 
     - name: 'terraform:destroy:kapsule:failsafe'
       run: terraform destroy -auto-approve
-      working-directory: terraform/live/demo/fr-par/kapsule-s3
+      working-directory: terraform/live/demo-s3/fr-par/clusters/full/kapsule
       if: "!contains(github.event.head_commit.message, '[ci keep]') && github.ref == 'refs/heads/master'"
       env:
         AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
@@ -119,9 +119,17 @@ jobs:
 
     - name: 'terraform:destroy:kapsule:cleanup-stale-state'
       run: terraform state list 2>/dev/null | xargs terraform state rm
-      working-directory: terraform/live/demo/fr-par/kapsule-s3
+      working-directory: terraform/live/demo-s3/fr-par/clusters/full/kapsule
       continue-on-error: true
       if: "!contains(github.event.head_commit.message, '[ci keep]') && github.ref == 'refs/heads/master'"
+      env:
+        AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+        AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+        SCW_ACCESS_KEY: ${{ secrets.SCW_ACCESS_KEY }}
+        SCW_SECRET_KEY: ${{ secrets.SCW_SECRET_KEY }}
+        SCW_DEFAULT_ORGANIZATION_ID: ${{ secrets.SCW_DEFAULT_ORGANIZATION_ID }}
+        SCW_DEFAULT_REGION: fr-par
+        SCW_DEFAULT_ZONE: fr-par-1
 
     - name: 'slack:success'
       if: success()
