--- a/.github/workflows/s3.yml
+++ b/.github/workflows/s3.yml
@@ -33,6 +33,7 @@ jobs:
         [whitelist]
         prefix = [ "$GITHUB_WORKSPACE" ]
         EOF
+        which direnv
 
     - name: 'tfenv:install'
       run: |
@@ -48,7 +49,9 @@ jobs:
         cli_config_credentials_token: ${{ secrets.TF_API_TOKEN }}
 
     - name: 'terraform:fmt:kapsule'
-      run: terraform fmt -check
+      run: |
+        direnv allow
+        terraform fmt -check
       working-directory: terraform/live/demo-s3/fr-par/clusters/full/kapsule
       env:
         AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
