--- a/.github/workflows/s3.yml
+++ b/.github/workflows/s3.yml
@@ -34,6 +34,7 @@ jobs:
         prefix = [ "$GITHUB_WORKSPACE" ]
         EOF
         which direnv
+        eval $(direnv hook bash)
 
     - name: 'tfenv:install'
       run: |
@@ -50,6 +51,7 @@ jobs:
 
     - name: 'terraform:fmt:kapsule'
       run: |
+        eval $(direnv hook bash)
         direnv allow
         direnv status
         terraform fmt -check
@@ -65,6 +67,7 @@ jobs:
 
     - name: 'terraform:init:kapsule'
       run: |
+        eval $(direnv hook bash)
         direnv allow
         direnv status
         terraform init -input=false
