chore(ci): direnv export
Signed-off-by: Kevin Lefevre <lefevre.kevin@gmail.com>

--- a/.github/workflows/s3.yml
+++ b/.github/workflows/s3.yml
@@ -54,6 +54,7 @@ jobs:
         eval $(direnv hook bash)
         direnv allow
         direnv status
+        eval "$(direnv export bash)"
         terraform fmt -check
       working-directory: terraform/live/demo-s3/fr-par/clusters/full/kapsule
       env:
@@ -70,6 +71,7 @@ jobs:
         eval $(direnv hook bash)
         direnv allow
         direnv status
+        eval "$(direnv export bash)"
         terraform init -input=false
       working-directory: terraform/live/demo-s3/fr-par/clusters/full/kapsule
       env:
