Revert "chore(ci): remove terraoform cloud token"
This reverts commit aa3a8c6b76aa5fa4aa300d9d8d12407cce21ae09.

--- a/.github/workflows/s3.yml
+++ b/.github/workflows/s3.yml
@@ -41,6 +41,7 @@ jobs:
       with:
         terraform_wrapper: true
         terraform_version: 0.14.7
+        cli_config_credentials_token: ${{ secrets.TF_API_TOKEN }}
 
     - name: 'terraform:fmt:kapsule'
       run: |
