--- a/terraform/live/global_values.yaml
+++ b/terraform/live/global_values.yaml
@@ -1,5 +1,5 @@
 ---
-default_domain_name: clusterfrak-dynamics.io
+default_domain_name: scw.particule.cloud
 prefix: pio
 project: tkap
 tf_state_bucket_region: fr-par
