--- a/terraform/live/global_values.yaml
+++ b/terraform/live/global_values.yaml
@@ -2,3 +2,5 @@
 default_domain_name: scw.particule.cloud
 prefix: pio
 project: tkap
+tf_state_bucket_region: fr-par
+tf_state_bucket_name: tkap-terraform-remote-state
