--- a/.github/workflows/mkdocs.yml
+++ b/.github/workflows/mkdocs.yml
@@ -3,7 +3,7 @@ name: 'tkap:mkdocs'
 on:
   push:
     branches:
-    - master
+    - main
     paths:
     - 'docs/**'
     - 'mkdocs.yml'
@@ -35,7 +35,7 @@ jobs:
         SLACK_BOT_TOKEN: ${{ secrets.SLACK_BOT_TOKEN }}
       uses: voxmedia/github-action-slack-notify-build@v1
       with:
-        channel: notifications
+        channel: ${{ secrets.SLACK_CHANNEL }}
         status: SUCCESS
         color: good
 
@@ -45,6 +45,6 @@ jobs:
         SLACK_BOT_TOKEN: ${{ secrets.SLACK_BOT_TOKEN }}
       uses: voxmedia/github-action-slack-notify-build@v1
       with:
-        channel: notifications
+        channel: ${{ secrets.SLACK_CHANNEL }}
         status: failure
         color: danger
