--- a/.github/workflows/s3.yml
+++ b/.github/workflows/s3.yml
@@ -3,7 +3,7 @@ name: 'tkap:terraform:env:demo:s3'
 on:
   push:
     branches:
-    - master
+    - main
     paths:
     - 'terraform/live/demo-s3/**'
     - '.github/workflows/s3.yml'
@@ -102,7 +102,7 @@ jobs:
         SCW_DEFAULT_ORGANIZATION_ID: ${{ secrets.SCW_DEFAULT_ORGANIZATION_ID }}
         SCW_DEFAULT_REGION: fr-par
         SCW_DEFAULT_ZONE: fr-par-1
-      if: github.ref == 'refs/heads/master'
+      if: github.ref == 'refs/heads/main'
 
     - name: 'terraform:destroy:kapsule'
       run: |
@@ -110,7 +110,7 @@ jobs:
         eval "$(direnv export bash)"
         terraform destroy -auto-approve
       working-directory: terraform/live/demo-s3/fr-par/clusters/full/kapsule
-      if: "!contains(github.event.head_commit.message, '[ci keep]') && github.ref == 'refs/heads/master'"
+      if: "!contains(github.event.head_commit.message, '[ci keep]') && github.ref == 'refs/heads/main'"
       continue-on-error: true
       env:
         AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
@@ -127,7 +127,7 @@ jobs:
         eval "$(direnv export bash)"
         terraform destroy -auto-approve
       working-directory: terraform/live/demo-s3/fr-par/clusters/full/kapsule
-      if: "!contains(github.event.head_commit.message, '[ci keep]') && github.ref == 'refs/heads/master'"
+      if: "!contains(github.event.head_commit.message, '[ci keep]') && github.ref == 'refs/heads/main'"
       env:
         AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
         AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
@@ -144,7 +144,7 @@ jobs:
         terraform state list 2>/dev/null | xargs terraform state rm
       working-directory: terraform/live/demo-s3/fr-par/clusters/full/kapsule
       continue-on-error: true
-      if: "!contains(github.event.head_commit.message, '[ci keep]') && github.ref == 'refs/heads/master'"
+      if: "!contains(github.event.head_commit.message, '[ci keep]') && github.ref == 'refs/heads/main'"
       env:
         AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
         AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
