--- a/.github/workflows/tfcloud.yml
+++ b/.github/workflows/tfcloud.yml
@@ -3,7 +3,7 @@ name: 'tkap:terraform:env:demo:tfcloud'
 on:
   push:
     branches:
-    - master
+    - main
     paths:
     - 'terraform/live/demo-tfcloud/**'
     - '.github/workflows/tfcloud.yml'
@@ -80,12 +80,12 @@ jobs:
         SCW_DEFAULT_ORGANIZATION_ID: ${{ secrets.SCW_DEFAULT_ORGANIZATION_ID }}
         SCW_DEFAULT_REGION: fr-par
         SCW_DEFAULT_ZONE: fr-par-1
-      if: github.ref == 'refs/heads/master'
+      if: github.ref == 'refs/heads/main'
 
     - name: 'terraform:destroy:kapsule'
       run: terraform destroy -auto-approve
       working-directory: terraform/live/demo-tfcloud/fr-par/clusters/full/kapsule
-      if: "!contains(github.event.head_commit.message, '[ci keep]') && github.ref == 'refs/heads/master'"
+      if: "!contains(github.event.head_commit.message, '[ci keep]') && github.ref == 'refs/heads/main'"
       continue-on-error: true
       env:
         AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
@@ -99,7 +99,7 @@ jobs:
     - name: 'terraform:destroy:kapsule:failsafe'
       run: terraform destroy -auto-approve
       working-directory: terraform/live/demo-tfcloud/fr-par/clusters/full/kapsule
-      if: "!contains(github.event.head_commit.message, '[ci keep]') && github.ref == 'refs/heads/master'"
+      if: "!contains(github.event.head_commit.message, '[ci keep]') && github.ref == 'refs/heads/main'"
       env:
         AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
         AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
@@ -113,7 +113,7 @@ jobs:
       run: terraform state list 2>/dev/null | xargs terraform state rm
       working-directory: terraform/live/demo-tfcloud/fr-par/clusters/full/kapsule
       continue-on-error: true
-      if: "!contains(github.event.head_commit.message, '[ci keep]') && github.ref == 'refs/heads/master'"
+      if: "!contains(github.event.head_commit.message, '[ci keep]') && github.ref == 'refs/heads/main'"
       env:
         AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
         AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
